--- a/SportUp/PasswordAlertViewController.storyboard
+++ b/SportUp/PasswordAlertViewController.storyboard
@@ -26,24 +26,24 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gsR-If-o44">
-                                        <rect key="frame" x="8" y="148" width="359" height="352"/>
+                                        <rect key="frame" x="8" y="153" width="359" height="342"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z1l-AU-3Mm" customClass="GoButton" customModule="SportUp" customModuleProvider="target">
-                                                <rect key="frame" x="99" y="262" width="160" height="50"/>
+                                                <rect key="frame" x="99" y="252" width="160" height="50"/>
                                                 <color key="backgroundColor" red="0.1946057081" green="0.8000642657" blue="0.87262988090000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="8tj-mo-7x8"/>
                                                     <constraint firstAttribute="width" constant="160" id="Bgo-fM-W1L"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                <state key="normal" title="Войти">
-                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
+                                                <state key="normal" title="Войти"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                         <real key="value" value="25"/>
                                                     </userDefinedRuntimeAttribute>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="defaultBackgroundColor">
+                                                        <color key="value" red="0.1946057081" green="0.8000642657" blue="0.87262988090000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="defaultDisabledColor">
                                                         <color key="value" red="0.1946057081" green="0.8000642657" blue="0.87262988090000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
@@ -59,11 +59,19 @@
                                                 <color key="textColor" red="0.32156862749999998" green="0.3803921569" blue="0.41568627450000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fst-vW-eVE">
+                                                <rect key="frame" x="69" y="221" width="220" height="1"/>
+                                                <color key="backgroundColor" red="0.78662341830000004" green="0.83886760469999999" blue="0.87229257819999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="220" id="BJh-Wt-cZz"/>
+                                                    <constraint firstAttribute="height" constant="1" id="S0P-QO-qIr"/>
+                                                </constraints>
+                                            </view>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconPadlock" translatesAutoresizingMaskIntoConstraints="NO" id="Vbx-Im-zRb">
                                                 <rect key="frame" x="160.5" y="30" width="37" height="40"/>
                                             </imageView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Пароль" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="Nea-HK-kPK">
-                                                <rect key="frame" x="69" y="183" width="220" height="24"/>
+                                                <rect key="frame" x="69.5" y="183" width="220" height="24"/>
                                                 <color key="textColor" red="0.2392156869" green="0.70588237050000002" blue="0.96470588450000005" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
@@ -74,9 +82,13 @@
                                             <constraint firstAttribute="trailing" secondItem="wTy-8I-A9q" secondAttribute="trailing" id="48F-W8-Oxa"/>
                                             <constraint firstItem="wTy-8I-A9q" firstAttribute="leading" secondItem="gsR-If-o44" secondAttribute="leading" id="AEs-Hb-VAI"/>
                                             <constraint firstItem="Nea-HK-kPK" firstAttribute="centerX" secondItem="gsR-If-o44" secondAttribute="centerX" id="Add-D3-vXW"/>
+                                            <constraint firstItem="Fst-vW-eVE" firstAttribute="centerX" secondItem="gsR-If-o44" secondAttribute="centerX" id="JR3-zc-sJo"/>
                                             <constraint firstItem="wTy-8I-A9q" firstAttribute="top" secondItem="Vbx-Im-zRb" secondAttribute="bottom" constant="30" id="K3S-Za-BCD"/>
+                                            <constraint firstItem="Nea-HK-kPK" firstAttribute="width" secondItem="Fst-vW-eVE" secondAttribute="width" id="Q06-tZ-Y0m"/>
+                                            <constraint firstItem="z1l-AU-3Mm" firstAttribute="top" secondItem="Fst-vW-eVE" secondAttribute="bottom" constant="30" id="RwL-gF-iAt"/>
                                             <constraint firstAttribute="bottomMargin" secondItem="z1l-AU-3Mm" secondAttribute="bottom" id="Xok-Q1-lAY"/>
                                             <constraint firstItem="Nea-HK-kPK" firstAttribute="top" secondItem="wTy-8I-A9q" secondAttribute="bottom" constant="40" id="ZPm-Kz-1Yu"/>
+                                            <constraint firstItem="Fst-vW-eVE" firstAttribute="top" secondItem="Nea-HK-kPK" secondAttribute="bottom" constant="14" id="b6T-uN-yDf"/>
                                             <constraint firstItem="Vbx-Im-zRb" firstAttribute="centerX" secondItem="gsR-If-o44" secondAttribute="centerX" id="ftu-Jo-zfb"/>
                                             <constraint firstItem="Vbx-Im-zRb" firstAttribute="top" secondItem="gsR-If-o44" secondAttribute="topMargin" id="pwm-JV-bXg"/>
                                             <constraint firstItem="z1l-AU-3Mm" firstAttribute="centerX" secondItem="gsR-If-o44" secondAttribute="centerX" id="vyb-WK-ugp"/>
@@ -88,24 +100,16 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fst-vW-eVE">
-                                        <rect key="frame" x="77" y="369" width="220" height="1"/>
-                                        <color key="backgroundColor" red="0.78662341830000004" green="0.83886760469999999" blue="0.87229257819999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="220" id="BJh-Wt-cZz"/>
-                                            <constraint firstAttribute="height" constant="1" id="S0P-QO-qIr"/>
-                                        </constraints>
-                                    </view>
                                 </subviews>
+                                <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstItem="Nea-HK-kPK" firstAttribute="bottom" secondItem="Fst-vW-eVE" secondAttribute="top" constant="-14" id="6bk-Hn-wzA"/>
-                                    <constraint firstItem="z1l-AU-3Mm" firstAttribute="top" secondItem="Fst-vW-eVE" secondAttribute="bottom" constant="40" id="Waq-kn-5in"/>
-                                    <constraint firstItem="Nea-HK-kPK" firstAttribute="width" secondItem="Fst-vW-eVE" secondAttribute="width" id="bOe-UJ-Csx"/>
                                     <constraint firstAttribute="trailing" secondItem="gsR-If-o44" secondAttribute="trailing" constant="8" id="nJx-YZ-O1Z"/>
                                     <constraint firstItem="gsR-If-o44" firstAttribute="leading" secondItem="H4M-Bb-w1Q" secondAttribute="leading" constant="8" id="oOI-sm-8bk"/>
                                     <constraint firstItem="gsR-If-o44" firstAttribute="centerY" secondItem="H4M-Bb-w1Q" secondAttribute="centerY" id="rbr-Kd-7bn"/>
-                                    <constraint firstItem="Fst-vW-eVE" firstAttribute="centerX" secondItem="H4M-Bb-w1Q" secondAttribute="centerX" id="sSP-cn-RGE"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="He3-Lc-wgi" appends="YES" id="DQp-m8-nd4"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="tintColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -118,14 +122,16 @@
                     </view>
                     <connections>
                         <outlet property="bottomLayoutConstraint" destination="9DQ-FC-VQN" id="JqT-61-TZZ"/>
+                        <outlet property="contentView" destination="gsR-If-o44" id="gNQ-Z5-2AT"/>
                         <outlet property="joinButton" destination="z1l-AU-3Mm" id="kX6-mB-N2t"/>
                         <outlet property="passwordField" destination="Nea-HK-kPK" id="aTd-a7-KWq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UHG-QL-0ko" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="GAS-Q3-Xeb">
+                <tapGestureRecognizer id="He3-Lc-wgi">
                     <connections>
-                        <action selector="licenseAgreementDidTap:" destination="sDo-wY-9gq" id="8dG-WL-aGh"/>
+                        <action selector="backgroundViewDidTap:" destination="sDo-wY-9gq" id="qK8-X5-LFG"/>
+                        <outlet property="delegate" destination="sDo-wY-9gq" id="hFr-Fh-Fp7"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
